--- a/examples/examples-browser/package.json
+++ b/examples/examples-browser/package.json
@@ -5,7 +5,12 @@
   "author": "justadudewhohacks",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "request": "^2.88.2"
-  }
+    "request": "^2.88.2",
+    "url": "^0.11.0",
+    "util": "^0.12.3"
+  },
+  "proxy": "http://localhost:4000/"
 }
